# UNKNOWNINCOME

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  backtest.py  bot.py  data.py  discovery.py  health.py  indicators.py  strategies.py
backend/app/backtest/: __init__.py  config.py  engine.py  metrics.py  rules.py  runner.py  service.py  store.py
backend/app/bot/: __init__.py  engine.py  killswitch.py  mode.py  notifier.py  promotion.py  signals.py  telegram.py  tracking.py
backend/app/core/: __init__.py  audit.py  clock.py  config.py  db.py  logging.py  queue.py  secrets.py  settings_store.py  version.py
backend/app/data/: __init__.py  alpha.py  cli.py  duckdb_query.py  gaps.py  parquet_store.py  sync.py  timeframes.py  universe.py
backend/app/data/adapters/: __init__.py  base.py  binance_usdm.py
backend/app/data/collectors/: __init__.py  liquidations.py  open_interest.py
backend/app/discovery/: __init__.py  candidates.py  combine.py  config.py  correlation.py  deflation_gate.py  evaluate.py  leaderboard.py  optimize.py  pipeline.py  roles.py  service.py  signal_synth.py  store.py  wfo.py
backend/app/discovery/finalist/: __init__.py  backtesting_py.py  base.py  crosscheck.py  lean_second.py
backend/app/execution/: __init__.py  base.py  binance.py  capacity.py  limit.py  paper.py  resilience.py  risk.py  sizing.py  slippage_model.py  slippage_reconcile.py
backend/app/indicators/: __init__.py  compute.py  loader.py  persistence.py  registry.py  signals.py  sources.py
backend/app/models/: __init__.py  backtest.py  base.py  discovery.py  indicator.py  market.py  research.py  risk.py  strategy.py  system.py  trading.py
backend/app/portfolio/: __init__.py  allocation.py  correlation.py  limits.py  netting.py  service.py
backend/app/research/: __init__.py  deflation.py  gate.py  registry.py
backend/app/strategy/: __init__.py  generator.py  genome.py  health.py  plugin_loader.py  plugin_registry.py  regen.py  regime.py  reoptimize.py  scheduler.py  service.py
backend/app/workers/: __init__.py  healthcheck.py  main.py
backend/scripts/: mem_profile.py  noise_test.py  reality_check.py  reference_gate.py  reference_strategies.py  testnet_smoke.py
backend/tests/: conftest.py  fakes.py  test_alpha_primitives.py  test_alpha_query.py  test_backtest_api.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_operands.py  test_backtest_runner.py  test_bot_api.py  test_bot_engine.py  test_bot_killswitch.py  test_bot_telegram.py  test_capacity.py  test_custom_indicator.py  test_data_api.py  test_deflation_gate.py  test_discovery_api.py  test_discovery_combine.py  test_discovery_correlation.py  test_discovery_crosscheck.py  test_discovery_pipeline.py  test_discovery_survivorship.py  test_discovery_wfo.py  test_duckdb_query.py  test_engine_risk_exit.py  test_execution_binance.py  test_execution_paper.py  test_execution_risk.py  test_gaps.py  test_health.py  test_indicator_cache.py  test_indicator_defs_persist.py  test_indicator_registry.py  test_indicators_api.py  test_indicators_reference.py  test_indicators_smoke.py  test_kline_taker_columns.py  test_limit_order.py  test_liquidation_collector.py  (+31 more)
(+68 files in other folders)
