[project]
name = "unknownincome-backend"
version = "0.1.0"
description = "UNKNOWNINCOME — autonomous backtest & trading system (backend)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "arq>=0.26",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "ccxt>=4.4",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "duckdb>=1.1",
    # Phase 2 — indicator registry. TA-Lib ships prebuilt wheels (bundled C lib);
    # pandas-ta 0.4.x is the maintained fork compatible with pandas 2.2+/3.0.
    "ta-lib>=0.6",
    "pandas-ta==0.4.71b0",
    # Phase 4 — discovery. Optuna drives the Stage-4 parameter search (TPE).
    "optuna>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]
# Phase 4 — finalist cross-validation engine (doc §6.1). Optional: the discovery
# pipeline uses an independent lean "second-opinion" verifier as a fallback when
# backtesting.py is unavailable, so core install + CI stay green without it.
finalist = [
    "backtesting>=0.3.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are intended as argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
